# Adlik

./: .bazelrc  .clang-format  .clang-tidy  .dockerignore  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  COMMITTERS.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  LICENSE  OWNERS.md  README.md  RELEASE.md  ROADMAP.md  TUTORIALS.md  WORKSPACE  azure-pipelines.yml  bors.toml  buildxxxxxxx.sh
adlik_serving/: BUILD  README.md  add_deps.bzl  serving.bzl  workspace.bzl
adlik_serving/apis/: BUILD  amc_task.proto  get_model_meta_impl.cc  get_model_meta_impl.h  grid_task.proto  model_operate.proto  model_operate_impl.cc  model_operate_impl.h  model_operate_service.proto  predict.proto  predict_impl.cc  predict_impl.h  predict_service.proto  server_status.proto  server_status_service.proto  task.proto  task_op_impl.cc  task_op_impl.h  task_service.proto
adlik_serving/clients/: adlik_serving_apis.md
adlik_serving/clients/cpp/: BUILD  CMakeLists.txt  README.md  cpp_client.cc
adlik_serving/clients/cpp/adlik_serving/apis/: get_model_meta.proto
adlik_serving/clients/cpp/include/adlik_serving/framework/domain/: model_spec.proto  version_policy.proto
adlik_serving/clients/cpp/test/adlik_serving/apis/: get_model_meta.grpc.pb.cc  get_model_meta.grpc.pb.h  get_model_meta.pb.cc  get_model_meta.pb.h  predict.grpc.pb.cc  predict.grpc.pb.h  predict.pb.cc  predict.pb.h  predict_service.grpc.pb.cc  predict_service.grpc.pb.h  predict_service.pb.cc  predict_service.pb.h
adlik_serving/clients/cpp/test/adlik_serving/framework/domain/: model_config.grpc.pb.cc  model_config.grpc.pb.h  model_config.pb.cc  model_config.pb.h  model_spec.grpc.pb.cc  model_spec.grpc.pb.h  model_spec.pb.cc  model_spec.pb.h  version_policy.grpc.pb.cc  version_policy.grpc.pb.h  version_policy.pb.cc  version_policy.pb.h
adlik_serving/clients/cpp/test/tensorflow/core/framework/: resource_handle.grpc.pb.cc  resource_handle.grpc.pb.h  resource_handle.pb.cc  tensor.grpc.pb.cc  tensor.grpc.pb.h  tensor.pb.cc  tensor_shape.grpc.pb.cc  tensor_shape.grpc.pb.h  tensor_shape.pb.cc  types.grpc.pb.cc  types.grpc.pb.h  types.pb.cc  types.pb.h
adlik_serving/demo/: BUILD  decode_png.cc  decode_png.h  image.h  main.cc  predict_service.cc  predict_service.h
adlik_serving/sdk/: BUILD  sdk_api.cc  sdk_api.h
adlik_serving/server/: main.cc
benchmark/: ADLIK_INTEL_TIGERLAKE_U_RESULT.md  PADDLE_RESULT.md  README.md  bandit.yaml  setup.py  tox.ini
benchmark/src/: automatic_test.py  cmd_script.py  compile_model.py  test_paddlepaddle_model_result.py  test_result.py
benchmark/tests/: test_automatic_test.py
ci/: BUILD
ci/azure-pipelines/: install-bazel.yml  install-buildifier.yml  install-clang-format.yml  install-cuda.yml  install-tensorrt.yml  run-ci-in-docker.yml  use-build-cache.yml
ci/checks/: bazel-build-clients.py  bazel-build-serving-tensorflow-check.py  bazel-build-serving.py  bazel-coverage-tests.py  bazel-long-time-build-check.py  buildifier.py  clang-format.py  clang-tidy.py  commit-message.py  copyright.py  flake8.py  (+1 more)
csv/: BUILD  README.md
csv/test/: CMakeLists.txt  README.md  main.cpp  tests.hpp
csv/test/inputs/: missing_columns_2.csv  test_02.csv  test_03.csv  test_04.csv  test_05.csv  test_07.csv  test_09.csv  test_10.csv  test_13.csv  test_14.csv  test_15.csv
cub/: BUILD
docker-images/: README.md  build.py  compiler_env_example.txt  compiler_json_example.json  env_field.txt
model_compiler/: .coveragerc-cpu  .pylintrc  README.md  bandit.yaml  config_schema.json  pytest.ini  setup.py  tox.ini
model_compiler_2/: .coveragerc  .coveragerc-cpu  .flake8  .gitignore  .pylintrc  README.md  mypy.ini  setup.py  tox.ini
script/: cuda.sh  opencl.sh  run_compiler.sh  run_server.sh  tensorrt.sh
tools/: clang-format.sh
(+902 files in other folders)
